--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "antd": "^4.0.0",
     "dva": "^2.6.0-beta.6",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "umi-request": "^1.3.5"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
